# me3-manager

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  USER_GUIDE.md  build-linux.sh  build-windows.py  build_pyinstaller.sh  cliff.toml  main.py  package-linux.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: checks.yml  ci.yml  release.yml
Me3_Manager.AppDir/: build-appimage.sh
core/: config_manager.py  improved_mod_manager.py  me3_info.py  me3_version_manager.py  mod_manager.py
helper/: convert_placeholders.py
resources/: remote_links.json
resources/linux/: me3-manager.desktop
resources/translations/: ar.json  en.json  zh.json
scripts/: check-unused-translations.py  create_release.sh  extract_changelog.sh  prepare_artifacts.sh  sync-requirements.sh  sync-translations.py  test_graphql.py  test_nexus_api_parse.py
src/me3_manager/: __init__.py  main.py
src/me3_manager/core/: cli.py  config_applicator.py  config_facade.py  config_manager.py  improved_mod_manager.py  me3_info.py  me3_version_manager.py  mod_manager.py  nexus_metadata.py
src/me3_manager/core/paths/: __init__.py  file_watcher.py  path_manager.py  profile_paths.py
src/me3_manager/core/profiles/: __init__.py  profile_converter.py  profile_manager.py  toml_profile_writer.py
src/me3_manager/core/settings/: __init__.py  game_registry.py  settings_manager.py  ui_settings.py
src/me3_manager/domain/: models.py
src/me3_manager/helper/: sync_translations.py
src/me3_manager/services/: app_update_checker.py  community_service.py  download_watcher.py  export_service.py  me3_service.py  nexus_service.py  nexus_sso.py  steam_service.py  steam_shortcuts.py
src/me3_manager/ui/: advanced_mod_options.py  app_controller.py  config_editor.py  draggable_game_button.py  game_management_dialog.py  game_options_dialog.py  game_page.py  main_window.py  mod_item.py  nexus_user_widget.py  profile_editor.py  profile_settings_dialog.py  settings_dialog.py  terminal.py
src/me3_manager/ui/dialogs/: __init__.py  advanced_mod_options.py  config_editor.py  game_management_dialog.py  game_options_dialog.py  help_about_dialog.py  profile_compare_dialog.py  profile_editor.py  profile_settings_dialog.py  settings_dialog.py  sso_auth_dialog.py  (+1 more)
src/me3_manager/utils/: archive_utils.py  command_runner.py  constants.py  nexus_filename_parser.py  path_utils.py  platform_utils.py  resource_path.py  status.py  toml_config_writer.py  translator.py
ui/: advanced_mod_options.py  config_editor.py  draggable_game_button.py  game_management_dialog.py  game_options_dialog.py  game_page.py  main_window.py  mod_item.py  profile_editor.py  settings_dialog.py  terminal.py
utils/: translator.py
(+14 files in other folders)
