[project]
name = "me3-manager"
version = "1.1.2"
description = "GUI application for Mod engine 3"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"

authors = [
  { name = "2Pz" },
]

dependencies = [
  "pyqt6>=6.9.1",
  "requests>=2.32.5",
  "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
  "cx-freeze>=8.4.0 ; sys_platform == 'win32'",
  "pyinstaller>=6.15.0 ; sys_platform == 'linux'",
  "ruff>=0.12.12",
]

[tool.uv]
# Don't install dev dependencies on 'uv run'
default-groups = []
